fix time overflow in turkish and some languages
* minor fix in displaying time

--- a/src/portal/src/app/base/left-side-nav/replication/replication/replication-tasks/replication-tasks.component.scss
+++ b/src/portal/src/app/base/left-side-nav/replication/replication/replication-tasks/replication-tasks.component.scss
@@ -92,7 +92,7 @@
 
                 label {
                     display: inline-block;
-                    width: 120px;
+                    width: 140px;
                 }
                 /* stylelint-disable */
                 >div {
